<resources>
    //button content descriptions
    <string name="leftbutton">leftbutton</string>
    <string name="rightbutton">rightbutton</string>

    //home page strings
    <string name="app_name">Real Talk</string>
    <string name="welcome">Welcome to Real Talk!</string>
    <string name="phone_prompt">Enter your mobile phone number</string>
    <string name="pass_prompt">Enter your password</string>
    <string name="submit">SUBMIT</string>
    <string name="phone_num_ex">(012)3456789</string>
    <string name="password_ex">password</string>
    <string name="new_user">New User</string>
    <string name="ret_user">Sign In</string>

    //real talk introduction information page
    <string name="intro">Welcome to Real Talk, the purpose of this application is for you
    to send a list of descriptors of how you are feeling or questions you might have regarding
         your health to a medical professional.</string>
    <string name="time_frame">Expected Time Frame:</string>
    <string name="time_frame_descrip">In 1-2 weeks, you will receive an informational package
        personalized based on your profile that will help you learn.</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="disclaimer_descrip">All the information sent to you is purely for
        educational purposes. Real Talk is not a proper medical diagnosis. Please see your
        local doctor if you have an emergency medical issue.</string>
    <string name="next">NEXT</string>


    //second page - new user registration strings
    <string name="name">Name </string>
    <string name="number">Mobile Number</string>
    <string name="info">New User Registration</string>
    <string name="age">Age</string>
    <string name="agehint">21</string>
    <string name="gender">Gender</string>
    <string name="sex_act">Anything else you would like me to know?</string>
    <string name="genderhint">male/female/non binary</string>
    <string name="activityhint">ex. sexually active, pregnancy test, \nuse contraception</string>
    <string name="namehint">ex. Mary Jane</string>
    <string name="numberhint">ex. 3596-9854</string>
    <string name="bubble">chat icon</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //cases waiting + processing page strings
    <string name="client_reports">Your Reports</string>
    <string name="confidential">All information given in these reports will be kept confidential.
    Click the reports to view contents. </string>
    <string name="waiting">Waiting</string>
    <string name="processed">Processed (Click-Me)</string>


    //what did we talk about last time strings
    <string name="lasttime_heading">What we talked about last time: </string>
    <string name="helptoday">What do you need help with today? > </string>

    //what do you want to learn today strings
    <string name="checkin_heading">What do you want to learn about today? </string>
    <string name="select_one">Select one of the topics below.</string>
    <string name="click_one">Click to select a topic</string>
    <string name="click_hold">Press and hold to see what each topic means</string>
    <string name="home">Home</string>
    <string name="back">BACK</string>
    <string name="ask_me">Ask me something else:</string>
    <string name="type_here">Type Here, then press Next</string>

    //topic page
    <string name="pick_one">Select one of the points of interest below</string>

    //bundling/selection page
    <string name="select">Click all the things you want to know, then press Submit</string>
    <string-array name="pregnancy_array">
        <item>Pregnancy symptoms</item>
        <item>Preventing Pregnancy</item>
        <item>Nutrition while Pregnant</item>
        <item>Trying to Conceive</item>
        <item>Sleep Regression</item>
        <item>Natural Birth</item>
        <item>Clinics Near Me</item>
    </string-array>

    <string-array name="childhealth_array">
        <item>Hearing, Speech, and Language</item>
        <item>Nutrition and Eating</item>
        <item>Newborn/Infant Care</item>
        <item>Physical Development</item>
        <item>Mental Health</item>
        <item>Clinics Near Me</item>
    </string-array>

    <string-array name="menstruation_array">
        <item>Menstrual Products (i.e. Pads, Tampons, Cups)</item>
        <item>Buying Products</item>
        <item>Premenstrual Syndrome (PMS)</item>
        <item>Menstrual Cramps</item>
        <item>Irregular Bleeding</item>
        <item>Heavy Bleeding</item>
        <item>Clinics Near Me</item>
    </string-array>

    <string-array name="birthcontrol_array">
        <item>Emergency Contraception</item>
        <item>Birth Control and STIs</item>
        <item>Buying Products</item>
        <item>Sterilization</item>
        <item>Condoms</item>
        <item>Long Acting Reversible Contraception</item>
        <item>Clinics Near Me</item>
    </string-array>

    <string-array name="hiv_array">
        <item>What is HIV/AIDS</item>
        <item>Prevention Methods</item>
        <item>Blood Transfusion Safety</item>
        <item>HIV Testing</item>
        <item>Treatment and Care</item>
        <item>Clinics Near Me</item>
    </string-array>


    //symptoms
    <string name="pregnancy">Pregnancy</string>
    <string name="childHealth">Child Health</string>
    <string name="babymed">Baby Medicine</string>
    <string name="postpregnancy">Post Pregnancy</string>
    <string name="sexhealth">Sexual Health</string>
    <string name="menstruation">Menstruation</string>
    <string name="products">Menstrual Products</string>
    <string name="birthcontrol">Birth Control</string>
    <string name="HIVAIDS">HIV and AIDS</string>
    <string name="headache">HeadAche</string>
    <string name="stomachpain">Stomach Pains</string>
    <string name="backpain">Back Pains</string>
    <string name="cough">Cough</string>
    <string name="swollenfeet">Swollen Feet</string>

    //Case Information
    <string name="caseheading">Case Summary</string>
    <string name="case_des">These are the topics you selected: </string>
    <string name="symptoms">Symptoms: </string>


    //Case dates
    <string name="fivedays">Case 6 ---- Submitted: Five Days Ago</string>
    <string name="threedays">Case 5 ---- Submitted: Three Days Ago</string>
    <string name="twohours">Case 4 ---- Submitted: Two Hours Ago</string>
    <string name="case1preg">Case 1 ---- Info: Pregnancy </string>
    <string name="case2child">Case 2 ---- Info: Child Health </string>
    <string name="case1">Case 1 ---- Submitted: 1 Minute Ago</string>
    //Information Pages
    <string name="TODO">What to do next? </string>
    <string name="DONE">DONE</string>
    <string name="start">PLAY</string>
    <string name="stop">STOP</string>
    //Pregnancy
    <string name="pregnancyIntro">Pregnancy, also known as gestation, is the time during which one or more offspring develops inside a woman. A multiple pregnancy involves more than one offspring, such as with twins.Pregnancy can occur by sexual intercourse or assisted reproductive technology. A pregnancy may end in a live birth, abortion, or miscarriage, though access to safe abortion care varies globally.</string>
    <string name="pregnancySymp">- Missed period\n- Tender, swollen breasts\n- Nausea with or without vomiting\n- Morning sickness\n
        - Increased urination\n- Fatigue\n </string>
    <string name="pregnancyTODO">- Make a prenatal appointment\n- Consult your provider about medications you are taking\n- If you smoke, quit\n
        - Stop drinking alcohol\n- Make sure your activities are pregnancy-safe</string>

</resources>
