<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity_Init_Info">

    <ImageView
        android:id="@+id/chatIcon2"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="19dp"
        android:contentDescription="@string/bubble"
        app:layout_constraintBottom_toTopOf="@+id/intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bubble" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatIcon2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="351dp"
        android:layout_height="105dp"
        android:layout_marginTop="60dp"
        android:text="@string/intro"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/time_frame_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="2dp"
        android:text="@string/time_frame"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/time_frame_descrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro" />

    <TextView
        android:id="@+id/time_frame_descrip"
        android:layout_width="351dp"
        android:layout_height="67dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="27dp"
        android:text="@string/time_frame_descrip"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/disclaimer_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_frame_title" />

    <TextView
        android:id="@+id/disclaimer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="299dp"
        android:text="@string/disclaimer"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/disclaimer_descrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_frame_descrip" />

    <TextView
        android:id="@+id/disclaimer_descrip"
        android:layout_width="349dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="181dp"
        android:text="@string/disclaimer_descrip"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclaimer_title" />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginStart="279dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="94dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#F8A489"
        android:fontFamily="sans-serif-light"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclaimer_descrip" />

</androidx.constraintlayout.widget.ConstraintLayout>